--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,5 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="normal_sized_text">20sp</dimen>
+    <dimen name="small_sized_text">14sp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="go_button_width">100dp</dimen>
 </resources>
