--- a/app/src/main/res/layout/activity_buyer_connection.xml
+++ b/app/src/main/res/layout/activity_buyer_connection.xml
@@ -47,7 +47,8 @@
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
                 android:textSize="@dimen/normal_sized_text"
-                android:textColor="@color/dark_green" />
+                android:textColor="@color/dark_green"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
@@ -114,7 +115,8 @@
                     android:layout_gravity="center_vertical"
                     android:textSize="@dimen/small_sized_text"
                     android:layout_marginLeft="2dp"
-                    android:textColor="@color/light_green" />
+                    android:textColor="@color/light_green"
+                    android:textStyle="bold" />
             </LinearLayout>
         </LinearLayout>
 
