--- a/app/src/main/res/layout/activity_seller_connection.xml
+++ b/app/src/main/res/layout/activity_seller_connection.xml
@@ -47,7 +47,8 @@
                     android:layout_gravity="center_horizontal"
                     android:gravity="center"
                     android:textSize="@dimen/normal_sized_text"
-                    android:textColor="@color/dark_green" />
+                    android:textColor="@color/dark_green"
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <LinearLayout
