--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_small_top_margin">4dp</dimen>
+    <dimen name="huge_sized_text">68sp</dimen>
+    <dimen name="super_sized_text">28sp</dimen>
     <dimen name="normal_sized_text">20sp</dimen>
     <dimen name="small_sized_text">14sp</dimen>
     <dimen name="fab_margin">16dp</dimen>
