--- a/app/src/main/res/layout/activity_balance_management.xml
+++ b/app/src/main/res/layout/activity_balance_management.xml
@@ -8,27 +8,15 @@
     android:background="#FFE599">
 
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="&lt; Return"
-        android:id="@+id/button"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:background="@android:color/transparent"
-        android:textColor="#82B469" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Your balance:"
         android:id="@+id/textView"
-        android:layout_below="@+id/button"
+        android:textColor="#284E11"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:textColor="#284E11" />
+        android:layout_above="@+id/textView2" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -36,12 +24,12 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="$0.00"
         android:id="@+id/textView2"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/textView"
-        android:layout_marginTop="10dp"
         android:textSize="70dp"
         android:textStyle="bold"
-        android:textColor="#284E11" />
+        android:textColor="#284E11"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/textView3"
+        android:layout_marginBottom="30dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -65,15 +53,16 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:inputType="number"
+            android:inputType="number|numberDecimal"
             android:ems="10"
             android:id="@+id/editText"
             android:layout_alignParentLeft="true"
             android:background="@drawable/edit_text_bg"
-            android:layout_toLeftOf="@+id/button2" />
+            android:layout_toLeftOf="@+id/button2"
+            android:padding="10dp" />
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="fill_parent"
             android:text="Add"
             android:id="@+id/button2"
@@ -120,5 +109,29 @@
         android:layout_alignLeft="@+id/relativeLayout"
         android:layout_alignRight="@+id/relativeLayout"
         android:background="#B6D7A8" />
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:background="#284E11">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="&lt; Return"
+            android:id="@+id/button"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:background="@android:color/transparent"
+            android:textColor="#82B469"
+            android:layout_marginLeft="20dp"
+            android:layout_gravity="center_vertical"
+            android:textSize="30dp" />
+    </TableRow>
 
 </RelativeLayout>
