--- a/app/src/main/res/layout/activity_seller_transaction_initiation.xml
+++ b/app/src/main/res/layout/activity_seller_transaction_initiation.xml
@@ -63,7 +63,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/return_text"
                     android:id="@+id/textView7"
-                    android:textColor="@color/dark_green"
+                    android:textColor="@color/light_green"
                     android:textSize="@dimen/normal_sized_text"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp" />
