--- a/app/src/main/res/layout/activity_balance_management.xml
+++ b/app/src/main/res/layout/activity_balance_management.xml
@@ -5,133 +5,283 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context=".buyer.BalanceManagementActivity"
-    android:background="#FFE599">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_small_top_margin"
+    android:background="@color/whole_interface_background">
 
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Your balance:"
-        android:id="@+id/textView"
-        android:textColor="#284E11"
-        android:layout_centerHorizontal="true"
-        android:layout_above="@+id/textView2" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="$0.00"
-        android:id="@+id/textView2"
-        android:textSize="70dp"
-        android:textStyle="bold"
-        android:textColor="#284E11"
-        android:layout_centerHorizontal="true"
-        android:layout_above="@+id/textView3"
-        android:layout_marginBottom="30dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="$20 minimum"
-        android:id="@+id/textView3"
-        android:layout_above="@+id/relativeLayout"
-        android:layout_alignLeft="@+id/relativeLayout"
-        android:layout_alignStart="@+id/relativeLayout"
-        android:textColor="#518B61" />
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:id="@+id/relativeLayout"
-        android:layout_centerInParent="true"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp">
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:inputType="number|numberDecimal"
-            android:ems="10"
-            android:id="@+id/editText"
-            android:layout_alignParentLeft="true"
-            android:background="@drawable/edit_text_bg"
-            android:layout_toLeftOf="@+id/button2"
-            android:padding="10dp" />
-
-        <Button
-            android:layout_width="80dp"
-            android:layout_height="fill_parent"
-            android:text="Add"
-            android:id="@+id/button2"
-            android:layout_alignParentRight="true"
-            android:background="#B6D7A8" />
-    </RelativeLayout>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:text="Auto-accept future payments"
-        android:id="@+id/button3"
-        android:layout_below="@+id/relativeLayout"
-        android:layout_alignLeft="@+id/relativeLayout"
-        android:layout_alignStart="@+id/relativeLayout"
-        android:layout_marginTop="30dp"
-        android:layout_alignRight="@+id/relativeLayout"
-        android:layout_alignEnd="@+id/relativeLayout"
-        android:background="#B6D7A8" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:text="Ask for repayment"
-        android:id="@+id/button4"
-        android:layout_below="@+id/button3"
-        android:layout_alignStart="@id/relativeLayout"
-        android:layout_marginTop="30dp"
-        android:layout_alignEnd="@id/relativeLayout"
-        android:background="#B6D7A8"
-        android:layout_alignLeft="@+id/relativeLayout"
-        android:layout_alignRight="@+id/relativeLayout" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:text="Payments history"
-        android:id="@+id/button5"
-        android:layout_alignParentBottom="false"
-        android:layout_alignStart="@id/relativeLayout"
-        android:layout_marginTop="30dp"
-        android:layout_alignEnd="@id/relativeLayout"
-        android:layout_below="@+id/button4"
-        android:layout_alignLeft="@+id/relativeLayout"
-        android:layout_alignRight="@+id/relativeLayout"
-        android:background="#B6D7A8" />
-
-    <TableRow
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:background="#284E11">
+        android:layout_alignParentStart="true">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="&lt; Return"
-            android:id="@+id/button"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:background="@android:color/transparent"
-            android:textColor="#82B469"
-            android:layout_marginLeft="20dp"
-            android:layout_gravity="center_vertical"
-            android:textSize="30dp" />
-    </TableRow>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:orientation="horizontal">
 
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:foreground="@android:color/transparent"
+                android:background="@android:color/transparent">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/returnView"
+                    android:src="@drawable/return_icon_bg"
+                    android:nestedScrollingEnabled="false"
+                    android:adjustViewBounds="false"
+                    android:clickable="false"
+                    android:background="@android:color/transparent"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp"
+                    android:foreground="@android:color/transparent" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:orientation="vertical"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/return_text"
+                    android:id="@+id/textView17"
+                    android:textColor="@color/light_green"
+                    android:textSize="@dimen/normal_sized_text"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="4"
+                android:orientation="vertical"
+                android:gravity="center_vertical|end">
+
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="18"
+            android:orientation="vertical">
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1">
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="2"
+                    android:gravity="center_horizontal|bottom"
+                    >
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:text="Your balance:"
+                        android:id="@+id/textView"
+                        android:textColor="#284E11"
+                        android:layout_centerHorizontal="true"
+                        android:layout_above="@+id/textView2" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="5"
+                    android:gravity="center_horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="$0.00"
+                        android:id="@+id/textView2"
+                        android:textSize="70dp"
+                        android:textStyle="bold"
+                        android:textColor="#284E11"
+                        android:layout_centerHorizontal="true"
+                        android:layout_above="@+id/textView3"
+                        android:layout_marginBottom="30dp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="2">
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:text="$20 minimum"
+                        android:id="@+id/textView3"
+                        android:layout_above="@+id/relativeLayout"
+                        android:layout_alignLeft="@+id/relativeLayout"
+                        android:layout_alignStart="@+id/relativeLayout"
+                        android:textColor="#518B61" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="2"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="8">
+
+                        <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="fill_parent"
+                            android:inputType="number|numberDecimal"
+                            android:ems="10"
+                            android:id="@+id/editText"
+                            android:layout_alignParentLeft="true"
+                            android:background="@drawable/edit_text_bg"
+                            android:layout_toLeftOf="@+id/button2"
+                            android:padding="10dp"
+                            android:layout_marginRight="3dp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="2">
+
+                        <Button
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="Add"
+                            android:id="@+id/button2"
+                            android:layout_alignParentRight="true"
+                            android:background="#B6D7A8" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1">
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="2">
+
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Auto-accept future payments"
+                        android:id="@+id/button3"
+                        android:layout_below="@+id/relativeLayout"
+                        android:layout_alignLeft="@+id/relativeLayout"
+                        android:layout_alignStart="@+id/relativeLayout"
+                        android:layout_alignRight="@+id/relativeLayout"
+                        android:layout_alignEnd="@+id/relativeLayout"
+                        android:background="#B6D7A8" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.5">
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="2">
+
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Ask for repayment"
+                        android:id="@+id/button4"
+                        android:layout_below="@+id/button3"
+                        android:layout_alignStart="@id/relativeLayout"
+                        android:layout_alignEnd="@id/relativeLayout"
+                        android:background="#B6D7A8"
+                        android:layout_alignLeft="@+id/relativeLayout"
+                        android:layout_alignRight="@+id/relativeLayout" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.5">
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="2">
+
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Payments history"
+                        android:id="@+id/button5"
+                        android:layout_alignParentBottom="false"
+                        android:layout_alignStart="@id/relativeLayout"
+                        android:layout_alignEnd="@id/relativeLayout"
+                        android:layout_below="@+id/button4"
+                        android:layout_alignLeft="@+id/relativeLayout"
+                        android:layout_alignRight="@+id/relativeLayout"
+                        android:background="#B6D7A8" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1">
+
+                </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
