--- a/app/src/main/res/layout/activity_seller_waiting_transaction.xml
+++ b/app/src/main/res/layout/activity_seller_waiting_transaction.xml
@@ -7,8 +7,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_small_top_margin"
-    tools:context="com.ig2i.thegreenmagpie.seller.SellerTransactionInitiationActivity"
+    tools:context="com.ig2i.thegreenmagpie.seller.SellerWaitingTransactionActivity"
     android:background="@color/whole_interface_background">
+
 
     <LinearLayout
         android:orientation="vertical"
@@ -16,18 +17,13 @@
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:foreground="@android:color/transparent"
-        android:background="@android:color/transparent">
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
-            android:orientation="horizontal"
-            android:background="@android:color/transparent"
-            android:baselineAligned="false"
-            android:foreground="@android:color/transparent">
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -61,7 +57,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/return_text"
+                    android:text="@string/cancel_text"
                     android:id="@+id/textView7"
                     android:textColor="@color/light_green"
                     android:textSize="@dimen/normal_sized_text"
@@ -97,124 +93,57 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="2">
+                android:layout_weight="5"
+                android:orientation="vertical">
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_weight="7"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/imageView3"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/signal_icon_w_bg" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
                 android:layout_weight="1"
-                android:gravity="center_horizontal">
+                android:orientation="vertical">
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2"
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/seller_transaction_initiation_amount"
-                    android:id="@+id/textView13"
-                    android:textSize="@dimen/super_sized_text"
-                    android:textColor="@android:color/black" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1">
-
-                <EditText
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:inputType="numberDecimal"
-                    android:ems="10"
-                    android:id="@+id/editText3"
-                    android:layout_weight="1"
-                    android:background="@drawable/edit_txt_bg_w_borders"
-                    android:text="0.80"
-                    android:textSize="@dimen/super_sized_text"
-                    android:textAlignment="center"
-                    android:numeric="decimal" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="0.5">
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="end|right">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/imageView2"
-                        android:src="@drawable/v_icon_bg"
-                        android:layout_marginTop="12dp"
-                        android:layout_marginBottom="12dp"
-                        android:cropToPadding="false"
-                        android:adjustViewBounds="true" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="3"
-                    android:gravity="center_vertical|start">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/seller_transaction_initiation_nfc"
-                        android:id="@+id/textView14"
-                        android:textColor="@color/light_green"
-                        android:textSize="@dimen/normal_sized_text"
-                        android:paddingStart="10dp"
-                        android:paddingLeft="10dp"/>
-
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="0.5">
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1.5"
-                android:gravity="center_horizontal">
-
-                <Button
-                    android:layout_width="@dimen/go_button_width"
-                    android:layout_height="match_parent"
-                    android:text="@string/go_button"
-                    android:id="@+id/button13"
-                    android:background="@drawable/edit_txt_bg_w_borders"
+                    android:text="@string/seller_waiting_transaction_text"
+                    android:id="@+id/textView15"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="@color/light_green"
                     android:textSize="@dimen/normal_sized_text" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1">
+                android:layout_weight="7"
+                android:orientation="vertical">
 
             </LinearLayout>
 
         </LinearLayout>
     </LinearLayout>
-
 </RelativeLayout>
