--- a/app/src/main/res/layout/activity_seller_waiting_transaction.xml
+++ b/app/src/main/res/layout/activity_seller_waiting_transaction.xml
@@ -40,7 +40,7 @@
                     android:src="@drawable/return_icon_bg"
                     android:nestedScrollingEnabled="false"
                     android:adjustViewBounds="false"
-                    android:clickable="false"
+                    android:clickable="true"
                     android:background="@android:color/transparent"
                     android:paddingTop="8dp"
                     android:paddingBottom="8dp"
@@ -62,7 +62,8 @@
                     android:textColor="@color/light_green"
                     android:textSize="@dimen/normal_sized_text"
                     android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp" />
+                    android:layout_marginRight="5dp"
+                    android:clickable="true" />
             </LinearLayout>
 
             <LinearLayout
