--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -3,9 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_small_top_margin"
     tools:context="com.ig2i.thegreenmagpie.HistoryActivity"
     android:background="@color/whole_interface_background">
@@ -22,6 +19,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -90,16 +89,17 @@
 
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:id="@+id/scrollView" >
 
-                <ListView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/listView"
-                    android:choiceMode="singleChoice"
-                    android:headerDividersEnabled="false" />
+                <TableLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:showDividers="beginning|end"
+                    android:id="@+id/tableLayout"
+                    android:textAlignment="center"></TableLayout>
             </ScrollView>
         </LinearLayout>
+
     </LinearLayout>
 </RelativeLayout>
