--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="dark_green">#396338</color>
     <color name="light_green">#5a9158</color>
     <color name="whole_interface_background">#ffe499</color>
+    <color name="grey">#BDBDBD</color>
+    <color name="black">#000000</color>
+    <color name="red">#dc0000</color>
+    <color name="green">#00631d</color>
+    <color name="very_light_green">#5fa172</color>
 </resources>
