--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,17 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/activity_small_top_margin"
-    tools:context="com.ig2i.thegreenmagpie.HistoryActivity"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="com.ig2i.thegreenmagpie.seller.SettingsActivity"
     android:background="@color/whole_interface_background">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,12 +29,12 @@
                 android:layout_weight="1"
                 android:orientation="vertical"
                 android:foreground="@android:color/transparent"
-                android:background="@android:color/transparent">
+                android:background="@android:color/transparent" >
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/returnView"
+                    android:id="@+id/returnImgSettings"
                     android:src="@drawable/return_icon_bg"
                     android:nestedScrollingEnabled="false"
                     android:adjustViewBounds="false"
@@ -50,13 +50,13 @@
                 android:layout_height="match_parent"
                 android:layout_weight="3"
                 android:orientation="vertical"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical" >
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/return_text"
-                    android:id="@+id/historyActivityReturnTextView"
+                    android:id="@+id/returnSettings"
                     android:textColor="@color/light_green"
                     android:textSize="@dimen/normal_sized_text"
                     android:layout_marginLeft="5dp"
@@ -68,40 +68,76 @@
                 android:layout_height="match_parent"
                 android:layout_weight="4"
                 android:orientation="vertical"
-                android:gravity="center_vertical|end">
+                android:gravity="center_vertical|end" >
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/history_right_title"
-                    android:id="@+id/textView16"
+                    android:text="Settings"
+                    android:id="@+id/textView21"
                     android:textColor="@color/light_green"
                     android:textSize="@dimen/normal_sized_text" />
             </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="18"
-            android:orientation="vertical"
-            android:id="@+id/container">
+            android:layout_height="wrap_content">
 
-
-            <ScrollView
-                android:layout_width="match_parent"
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/scrollView">
-
-                <TableLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:showDividers="beginning|end"
-                    android:id="@+id/tableLayout"
-                    android:textAlignment="center"></TableLayout>
-            </ScrollView>
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Change admin password"
+                android:id="@+id/textView20"
+                android:textColor="@color/dark_green" />
 
         </LinearLayout>
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Current:"
+                android:id="@+id/textView22"
+                android:textColor="@color/light_green" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:ems="10"
+                android:id="@+id/currentPwdSettings"
+                android:background="@drawable/edit_text_bg" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="New:"
+                android:id="@+id/textView24"
+                android:textColor="@color/light_green" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:ems="10"
+                android:id="@+id/newPwdSettings"
+                android:background="@drawable/edit_text_bg" />
+        </LinearLayout>
     </LinearLayout>
+
 </RelativeLayout>
