--- a/app/src/main/res/layout/activity_balance_management.xml
+++ b/app/src/main/res/layout/activity_balance_management.xml
@@ -50,7 +50,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="3"
+                android:layout_weight="2"
                 android:orientation="vertical"
                 android:gravity="center_vertical">
 
@@ -68,7 +68,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="4"
+                android:layout_weight="5"
                 android:orientation="vertical"
                 android:gravity="center_vertical|end">
 
@@ -81,7 +81,8 @@
                     android:id="@+id/textView18"
                     android:textSize="@dimen/normal_sized_text"
                     android:textColor="@color/light_green"
-                    android:textAlignment="textEnd" />
+                    android:textAlignment="textEnd"
+                    android:layout_gravity="end"/>
             </LinearLayout>
         </LinearLayout>
 
